feat: implement FailureType enum for customer failure types and update LookupController to use it